--- a/src/Compilers/CSharp/Portable/CSharpResources.resx
+++ b/src/Compilers/CSharp/Portable/CSharpResources.resx
@@ -5376,7 +5376,7 @@ To remove the warning, you can use /reference instead (set the Embed Interop Typ
     <value>Parentheses are required around the switch governing expression.</value>
   </data>
   <data name="ERR_TupleElementNameMismatch" xml:space="preserve">
-    <value>The name '{0}' does not identify tuple element {1}.</value>
+    <value>The name '{0}' does not identify tuple element '{1}'.</value>
   </data>
   <data name="ERR_DeconstructParameterNameMismatch" xml:space="preserve">
     <value>The name '{0}' does not match the corresponding 'Deconstruct' parameter '{1}'.</value>
