--- a/src/VisualStudio/CSharp/Impl/xlf/CSharpVSResources.fr.xlf
+++ b/src/VisualStudio/CSharp/Impl/xlf/CSharpVSResources.fr.xlf
@@ -694,7 +694,7 @@
       </trans-unit>
       <trans-unit id="Generate Event Subscription">
         <source>Generate Event Subscription</source>
-        <target state="new">Generate Event Subscription</target>
+        <target state="translated">Générer un abonnement à des événements</target>
         <note />
       </trans-unit>
     </body>
