--- a/src/EditorFeatures/Core/xlf/EditorFeaturesResources.it.xlf
+++ b/src/EditorFeatures/Core/xlf/EditorFeaturesResources.it.xlf
@@ -1086,67 +1086,67 @@ Continuare?</target>
       </trans-unit>
       <trans-unit id="Block_Comment_Editing">
         <source>Block Comment Editing</source>
-        <target state="new">Block Comment Editing</target>
+        <target state="translated">Blocca modifica dei commenti</target>
         <note />
       </trans-unit>
       <trans-unit id="Comment_Uncomment_Selection">
         <source>Comment/Uncomment Selection</source>
-        <target state="new">Comment/Uncomment Selection</target>
+        <target state="translated">Aggiungi/Rimuovi commento selezione</target>
         <note />
       </trans-unit>
       <trans-unit id="Code_Completion">
         <source>Code Completion</source>
-        <target state="new">Code Completion</target>
+        <target state="translated">Completamento codice</target>
         <note />
       </trans-unit>
       <trans-unit id="Execute_In_Interactive">
         <source>Execute In Interactive</source>
-        <target state="new">Execute In Interactive</target>
+        <target state="translated">Esegui in finestra interattiva</target>
         <note />
       </trans-unit>
       <trans-unit id="Extract_Interface">
         <source>Extract Interface</source>
-        <target state="new">Extract Interface</target>
+        <target state="translated">Estrai interfaccia</target>
         <note />
       </trans-unit>
       <trans-unit id="Go_To_Adjacent_Member">
         <source>Go To Adjacent Member</source>
-        <target state="new">Go To Adjacent Member</target>
+        <target state="translated">Vai al membro adiacente</target>
         <note />
       </trans-unit>
       <trans-unit id="Interactive">
         <source>Interactive</source>
-        <target state="new">Interactive</target>
+        <target state="translated">Finestra interattiva</target>
         <note />
       </trans-unit>
       <trans-unit id="Navigate_To_Highlight_Reference">
         <source>Navigate To Highlighted Reference</source>
-        <target state="new">Navigate To Highlighted Reference</target>
+        <target state="translated">Passa al riferimento evidenziato</target>
         <note />
       </trans-unit>
       <trans-unit id="Outlining">
         <source>Outlining</source>
-        <target state="new">Outlining</target>
+        <target state="translated">Struttura</target>
         <note />
       </trans-unit>
       <trans-unit id="Rename_Tracking_Cancellation">
         <source>Rename Tracking Cancellation</source>
-        <target state="new">Rename Tracking Cancellation</target>
+        <target state="translated">Annullamento verifica ridenominazione</target>
         <note />
       </trans-unit>
       <trans-unit id="Signature_Help">
         <source>Signature Help</source>
-        <target state="new">Signature Help</target>
+        <target state="translated">Guida per la firma</target>
         <note />
       </trans-unit>
       <trans-unit id="Smart_Token_Formatter">
         <source>Smart Token Formatter</source>
-        <target state="new">Smart Token Formatter</target>
+        <target state="translated">Formattatore di token intelligente</target>
         <note />
       </trans-unit>
       <trans-unit id="Paste_in_Interactive">
         <source>Paste in Interactive</source>
-        <target state="new">Paste in Interactive</target>
+        <target state="translated">Incolla in finestra interattiva</target>
         <note />
       </trans-unit>
     </body>
