--- a/src/EditorFeatures/Core/xlf/EditorFeaturesResources.ja.xlf
+++ b/src/EditorFeatures/Core/xlf/EditorFeaturesResources.ja.xlf
@@ -1086,67 +1086,67 @@ Do you want to proceed?</source>
       </trans-unit>
       <trans-unit id="Block_Comment_Editing">
         <source>Block Comment Editing</source>
-        <target state="new">Block Comment Editing</target>
+        <target state="translated">コメント編集のブロック</target>
         <note />
       </trans-unit>
       <trans-unit id="Comment_Uncomment_Selection">
         <source>Comment/Uncomment Selection</source>
-        <target state="new">Comment/Uncomment Selection</target>
+        <target state="translated">選択範囲のコメント/コメント解除</target>
         <note />
       </trans-unit>
       <trans-unit id="Code_Completion">
         <source>Code Completion</source>
-        <target state="new">Code Completion</target>
+        <target state="translated">コード補完</target>
         <note />
       </trans-unit>
       <trans-unit id="Execute_In_Interactive">
         <source>Execute In Interactive</source>
-        <target state="new">Execute In Interactive</target>
+        <target state="translated">対話形式で実行</target>
         <note />
       </trans-unit>
       <trans-unit id="Extract_Interface">
         <source>Extract Interface</source>
-        <target state="new">Extract Interface</target>
+        <target state="translated">インターフェイスの抽出</target>
         <note />
       </trans-unit>
       <trans-unit id="Go_To_Adjacent_Member">
         <source>Go To Adjacent Member</source>
-        <target state="new">Go To Adjacent Member</target>
+        <target state="translated">隣接するメンバーに移動</target>
         <note />
       </trans-unit>
       <trans-unit id="Interactive">
         <source>Interactive</source>
-        <target state="new">Interactive</target>
+        <target state="translated">対話型</target>
         <note />
       </trans-unit>
       <trans-unit id="Navigate_To_Highlight_Reference">
         <source>Navigate To Highlighted Reference</source>
-        <target state="new">Navigate To Highlighted Reference</target>
+        <target state="translated">強調表示された参照へ移動</target>
         <note />
       </trans-unit>
       <trans-unit id="Outlining">
         <source>Outlining</source>
-        <target state="new">Outlining</target>
+        <target state="translated">アウトライン</target>
         <note />
       </trans-unit>
       <trans-unit id="Rename_Tracking_Cancellation">
         <source>Rename Tracking Cancellation</source>
-        <target state="new">Rename Tracking Cancellation</target>
+        <target state="translated">名前変更の追跡取り消し</target>
         <note />
       </trans-unit>
       <trans-unit id="Signature_Help">
         <source>Signature Help</source>
-        <target state="new">Signature Help</target>
+        <target state="translated">シグネチャ ヘルプ</target>
         <note />
       </trans-unit>
       <trans-unit id="Smart_Token_Formatter">
         <source>Smart Token Formatter</source>
-        <target state="new">Smart Token Formatter</target>
+        <target state="translated">スマート トークン フォーマッタ</target>
         <note />
       </trans-unit>
       <trans-unit id="Paste_in_Interactive">
         <source>Paste in Interactive</source>
-        <target state="new">Paste in Interactive</target>
+        <target state="translated">対話形式で貼り付け</target>
         <note />
       </trans-unit>
     </body>
