--- a/src/EditorFeatures/Core/xlf/EditorFeaturesResources.zh-Hans.xlf
+++ b/src/EditorFeatures/Core/xlf/EditorFeaturesResources.zh-Hans.xlf
@@ -1086,67 +1086,67 @@ Do you want to proceed?</source>
       </trans-unit>
       <trans-unit id="Block_Comment_Editing">
         <source>Block Comment Editing</source>
-        <target state="new">Block Comment Editing</target>
+        <target state="translated">阻止注释编辑</target>
         <note />
       </trans-unit>
       <trans-unit id="Comment_Uncomment_Selection">
         <source>Comment/Uncomment Selection</source>
-        <target state="new">Comment/Uncomment Selection</target>
+        <target state="translated">注释/取消注释选定内容</target>
         <note />
       </trans-unit>
       <trans-unit id="Code_Completion">
         <source>Code Completion</source>
-        <target state="new">Code Completion</target>
+        <target state="translated">代码完成</target>
         <note />
       </trans-unit>
       <trans-unit id="Execute_In_Interactive">
         <source>Execute In Interactive</source>
-        <target state="new">Execute In Interactive</target>
+        <target state="translated">交互执行</target>
         <note />
       </trans-unit>
       <trans-unit id="Extract_Interface">
         <source>Extract Interface</source>
-        <target state="new">Extract Interface</target>
+        <target state="translated">提取接口</target>
         <note />
       </trans-unit>
       <trans-unit id="Go_To_Adjacent_Member">
         <source>Go To Adjacent Member</source>
-        <target state="new">Go To Adjacent Member</target>
+        <target state="translated">转到相邻成员</target>
         <note />
       </trans-unit>
       <trans-unit id="Interactive">
         <source>Interactive</source>
-        <target state="new">Interactive</target>
+        <target state="translated">交互</target>
         <note />
       </trans-unit>
       <trans-unit id="Navigate_To_Highlight_Reference">
         <source>Navigate To Highlighted Reference</source>
-        <target state="new">Navigate To Highlighted Reference</target>
+        <target state="translated">导航到突出显示引用</target>
         <note />
       </trans-unit>
       <trans-unit id="Outlining">
         <source>Outlining</source>
-        <target state="new">Outlining</target>
+        <target state="translated">大纲</target>
         <note />
       </trans-unit>
       <trans-unit id="Rename_Tracking_Cancellation">
         <source>Rename Tracking Cancellation</source>
-        <target state="new">Rename Tracking Cancellation</target>
+        <target state="translated">重命名跟踪取消</target>
         <note />
       </trans-unit>
       <trans-unit id="Signature_Help">
         <source>Signature Help</source>
-        <target state="new">Signature Help</target>
+        <target state="translated">签名帮助</target>
         <note />
       </trans-unit>
       <trans-unit id="Smart_Token_Formatter">
         <source>Smart Token Formatter</source>
-        <target state="new">Smart Token Formatter</target>
+        <target state="translated">智能令牌格式化程序</target>
         <note />
       </trans-unit>
       <trans-unit id="Paste_in_Interactive">
         <source>Paste in Interactive</source>
-        <target state="new">Paste in Interactive</target>
+        <target state="translated">交互粘贴</target>
         <note />
       </trans-unit>
     </body>
