--- a/src/EditorFeatures/Core/xlf/EditorFeaturesResources.zh-Hant.xlf
+++ b/src/EditorFeatures/Core/xlf/EditorFeaturesResources.zh-Hant.xlf
@@ -1086,67 +1086,67 @@ Do you want to proceed?</source>
       </trans-unit>
       <trans-unit id="Block_Comment_Editing">
         <source>Block Comment Editing</source>
-        <target state="new">Block Comment Editing</target>
+        <target state="translated">區塊註解編輯</target>
         <note />
       </trans-unit>
       <trans-unit id="Comment_Uncomment_Selection">
         <source>Comment/Uncomment Selection</source>
-        <target state="new">Comment/Uncomment Selection</target>
+        <target state="translated">註解/取消註解選取範圍</target>
         <note />
       </trans-unit>
       <trans-unit id="Code_Completion">
         <source>Code Completion</source>
-        <target state="new">Code Completion</target>
+        <target state="translated">程式碼完成</target>
         <note />
       </trans-unit>
       <trans-unit id="Execute_In_Interactive">
         <source>Execute In Interactive</source>
-        <target state="new">Execute In Interactive</target>
+        <target state="translated">以互動方式執行</target>
         <note />
       </trans-unit>
       <trans-unit id="Extract_Interface">
         <source>Extract Interface</source>
-        <target state="new">Extract Interface</target>
+        <target state="translated">擷取介面</target>
         <note />
       </trans-unit>
       <trans-unit id="Go_To_Adjacent_Member">
         <source>Go To Adjacent Member</source>
-        <target state="new">Go To Adjacent Member</target>
+        <target state="translated">移至相鄰成員</target>
         <note />
       </trans-unit>
       <trans-unit id="Interactive">
         <source>Interactive</source>
-        <target state="new">Interactive</target>
+        <target state="translated">互動式</target>
         <note />
       </trans-unit>
       <trans-unit id="Navigate_To_Highlight_Reference">
         <source>Navigate To Highlighted Reference</source>
-        <target state="new">Navigate To Highlighted Reference</target>
+        <target state="translated">巡覽至反白顯示的參考</target>
         <note />
       </trans-unit>
       <trans-unit id="Outlining">
         <source>Outlining</source>
-        <target state="new">Outlining</target>
+        <target state="translated">大綱</target>
         <note />
       </trans-unit>
       <trans-unit id="Rename_Tracking_Cancellation">
         <source>Rename Tracking Cancellation</source>
-        <target state="new">Rename Tracking Cancellation</target>
+        <target state="translated">重新命名追蹤取消</target>
         <note />
       </trans-unit>
       <trans-unit id="Signature_Help">
         <source>Signature Help</source>
-        <target state="new">Signature Help</target>
+        <target state="translated">簽章說明</target>
         <note />
       </trans-unit>
       <trans-unit id="Smart_Token_Formatter">
         <source>Smart Token Formatter</source>
-        <target state="new">Smart Token Formatter</target>
+        <target state="translated">智慧權杖格式器</target>
         <note />
       </trans-unit>
       <trans-unit id="Paste_in_Interactive">
         <source>Paste in Interactive</source>
-        <target state="new">Paste in Interactive</target>
+        <target state="translated">以互動方式貼上</target>
         <note />
       </trans-unit>
     </body>
