--- a/src/EditorFeatures/VisualBasic/xlf/VBEditorResources.zh-Hans.xlf
+++ b/src/EditorFeatures/VisualBasic/xlf/VBEditorResources.zh-Hans.xlf
@@ -109,7 +109,7 @@
       </trans-unit>
       <trans-unit id="Implement_Abstract_Class_Or_Interface">
         <source>Implement Abstract Class Or Interface</source>
-        <target state="new">Implement Abstract Class Or Interface</target>
+        <target state="translated">实现抽象类或接口</target>
         <note />
       </trans-unit>
     </body>
