--- a/src/EditorFeatures/VisualBasic/xlf/VBEditorResources.zh-Hant.xlf
+++ b/src/EditorFeatures/VisualBasic/xlf/VBEditorResources.zh-Hant.xlf
@@ -109,7 +109,7 @@
       </trans-unit>
       <trans-unit id="Implement_Abstract_Class_Or_Interface">
         <source>Implement Abstract Class Or Interface</source>
-        <target state="new">Implement Abstract Class Or Interface</target>
+        <target state="translated">實作抽象類別或介面</target>
         <note />
       </trans-unit>
     </body>
