--- a/src/VisualStudio/Core/Def/xlf/ServicesVSResources.pl.xlf
+++ b/src/VisualStudio/Core/Def/xlf/ServicesVSResources.pl.xlf
@@ -1424,7 +1424,7 @@ Funkcja „Uproszczone ładowanie rozwiązania” jest włączona dla bieżąceg
       </trans-unit>
       <trans-unit id="ErrorReadingFile">
         <source>Error while reading file '{0}': {1}</source>
-        <target state="needs-review-translation">Błąd podczas odczytu pliku</target>
+        <target state="translated">Błąd podczas odczytywania pliku „{0}”: {1}</target>
         <note />
       </trans-unit>
       <trans-unit id="ModuleHasBeenUnloaded">
@@ -1490,12 +1490,12 @@ Wyrażam zgodę na wszystkie następujące postanowienia:</target>
       </trans-unit>
       <trans-unit id="Sync_Class_View">
         <source>Sync Class View</source>
-        <target state="new">Sync Class View</target>
+        <target state="translated">Synchronizuj widok klasy</target>
         <note />
       </trans-unit>
       <trans-unit id="CantApplyChangesUnexpectedError">
         <source>Can't apply changes -- unexpected error: '{0}'</source>
-        <target state="new">Can't apply changes -- unexpected error: '{0}'</target>
+        <target state="translated">Nie można zastosować zmian — nieoczekiwany błąd: „{0}”</target>
         <note />
       </trans-unit>
       <trans-unit id="Field_preferences_colon">
@@ -1510,7 +1510,7 @@ Wyrażam zgodę na wszystkie następujące postanowienia:</target>
       </trans-unit>
       <trans-unit id="Manage_naming_styles">
         <source>Manage naming styles</source>
-        <target state="new">Manage naming styles</target>
+        <target state="translated">Zarządzaj stylami nazewnictwa</target>
         <note />
       </trans-unit>
     </body>
